--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 :root {
     --color-background: #313338; /* overall background, 100% fine */
-    --color-on-background: blue; /* i think the text */
+    --color-on-background: white; /* the text on all except the top */
     --color-background-hover: #eee; /* idk */
     --color-on-background-hover: #2E3035; /* idk */
-    --color-primary: #2B2D31; /* idk */
+    --color-primary: #444037; /* selected list level on left background thing */
     --color-on-primary: #white; /* selected text i think */
     --color-error: #de0000; /* idk */
     --color-on-error: white; /* idk */
